--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,8 +44,9 @@
             <li class="active">
               <form class="navbar-form navbar-right" role="search" name="logoutForm"
               ng-submit="logoutUesr()" action="/logout" method="post" novalidate="">
-                <button type="submit" ng-disabled="logoutForm.$invalid" class="btn btn-primary">Logout</button>
+               <button type="button" class="btn btn-primary" ng-click="logout()">Logout</button>
               </form>
+              
             </li>
           </ul>
           <p class="navbar-text navbar-right" id="ProfileDisplayLink">
